[package]
name = "cw-vault-token"
description = " An abstraction for different ways of implementing a vault token."
version = "0.1.0"
authors = ["Apollo Devs"]
edition = "2021"
repository = "https://github.com/apollodao/cw-token"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://apollo.farm/"
documentation = ""                                                       # TODO: add api-docs
keywords = ["blockchain", "cosmos", "library"]

[workspace]

[dependencies]
osmosis-std = { rev = "b3df85158eb52ad5d99f3580f4a128bbdaeffa17", git = "https://github.com/osmosis-labs/osmosis-rust.git" }
cosmwasm-std = { version = "1.1", features = ["stargate"] }
cw20 = "0.16"
cw20-base = { version = "0.16", features = ["library"] }
thiserror = { version = "1.0.37" }
cosmwasm-schema = { version = "1.1.3" }
cw-utils = { version = "0.16" }

[dev-dependencies]
osmosis-testing = { git = "https://github.com/apollodao/osmosis-rust.git", branch = "osmosis-v13" }
cw-it = { git = "https://github.com/apollodao/cw-it" }
prost = "0.11.0"
test-case = "2.2.2"