[package]
name = "cw-vault-token"
description = " An abstraction for different ways of implementing a vault token."
version = "0.1.0"
authors = ["Apollo Devs <shared@apollo.farm>"]
edition = "2021"
repository = "https://github.com/apollodao/cw-vault-token/"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://apollo.farm/"
documentation = "https://docs.rs/cw-vault-token/"                                                       # TODO: add api-docs
keywords = ["blockchain", "cosmos", "library", "cosmwasm"]

[dependencies]
osmosis-std = "0.14.0"
cosmwasm-std = { version = "1.2.1", features = ["stargate"] }
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
thiserror = "1.0.38"
cosmwasm-schema = "1.2.1"
cw-utils = "1.0.1"

[dev-dependencies]
osmosis-testing = { git = "https://github.com/apollodao/osmosis-rust.git", branch = "osmosis-v13" }
prost = "0.11.0"
test-case = "3.0.0"
